[FSSS-200] fix: Remove product card border on mobile (#379)
* Add media query to product grid and product grid skeleton

* Update CHANGELOG

--- a/src/components/product/ProductGrid/product-grid.scss
+++ b/src/components/product/ProductGrid/product-grid.scss
@@ -22,14 +22,4 @@
   li {
     background-color: var(--color-neutral-0);
   }
-
-  [data-store-card] {
-    &[data-card-bordered="true"] {
-      border: none;
-
-      @include media(">=notebook") {
-        border: 1px solid var(--color-border-display);
-      }
-    }
-  }
 }
